@@ -16,8 +16,8 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.Collections;
-import java.util.List;
 
 @Configuration
 public class CheerChatConfig {
@@ -26,12 +26,13 @@ public class CheerChatConfig {
         http.httpBasic(HttpBasicConfigurer::disable)
             .sessionManagement(configurer -> configurer.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
             .authorizeHttpRequests(authorize ->
-                authorize
-                    .requestMatchers("/api/**").permitAll()
-                    .requestMatchers("/api-docs/swagger-config","/sign-in", "sign-up").permitAll()
-                    .requestMatchers(HttpMethod.OPTIONS,"/**").permitAll()
-//                      .requestMatchers("/api/chat/**").hasRole(ROLE-enum)
-                    .anyRequest().authenticated()
+                authorize.requestMatchers("/api/**").authenticated()
+                        .requestMatchers("/").permitAll()
+                        .requestMatchers("/api-docs/swagger-config","/sign-in", "sign-up").permitAll()
+                        .requestMatchers(HttpMethod.OPTIONS,"/**").permitAll()
+//                        .requestMatchers("/api/chat/**").hasRole(ROLE-enum)
+                        .anyRequest().permitAll()
+//                        .anyRequest().authenticated()
             )
             .addFilterBefore(new JwtTokenValidator(), BasicAuthenticationFilter.class)
             .csrf(CsrfConfigurer::disable)
@@ -39,30 +40,30 @@ public class CheerChatConfig {
 //            .exceptionHandling(exceptionConfig ->
 //                    exceptionConfig.authenticationEntryPoint(로그인 실패 엔드포인트 설정).accessDeniedHandler(입력 거절 처리)
 //            )
-            .formLogin(formLogin ->
-                    formLogin
+//            .formLogin(formLogin ->
+//                    formLogin
 //                            .loginPage("/login/login")
 //                            .usernameParameter("username")
 //                            .passwordParameter("password")
 //                            .loginProcessingUrl("/login/login-proc")
-                            .defaultSuccessUrl("/", true)
-            )
-            .logout(logoutConfig ->
-                    logoutConfig.logoutSuccessUrl("/")
-            )
+//                            .defaultSuccessUrl("/", true)
+//            )
+//            .logout(logoutConfig ->
+//                    logoutConfig.logoutSuccessUrl("/")
+//            )
 //            .userDetailsService(회원정보 관리 UserDetailsService)
         ;
         return http.build();
     }
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration cfg = new CorsConfiguration();
-        cfg.setAllowedOrigins(List.of(
-                "http://localhost:3000/" // react 포트
+        cfg.setAllowedOrigins(Arrays.asList(
+                "http://localhost:3000xw" // react 포트
         ));
         cfg.setAllowedMethods(Collections.singletonList("*"));
         cfg.setAllowCredentials(true);
         cfg.setAllowedHeaders(Collections.singletonList("*"));
-        cfg.setExposedHeaders(List.of("Authorization"));
+        cfg.setExposedHeaders(Arrays.asList("Authorization"));
         cfg.setMaxAge(3600L);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**",cfg);
